# POSSIM

./: .gitignore  CMakeLists.txt  README.md  possim_config.xml
cmake/: POSSIMConfig.h  POSSIMConfig.h.in
configs/: defaultconfig.xml  example.xml  united.xml
data/battery/: examplebattery.txt
data/demand/examples/generic/: 04_weekday.csv  04_weekend.csv  05_weekday.csv  05_weekend.csv
data/demand/examples/housespecific/: houseallocation.csv
data/demand/examples/housespecific/weekday/: 1.csv  2.csv
data/demand/examples/housespecific/weekend/: 1.csv  2.csv
data/demand/examples/phasespecific/: phaseA.csv  phaseB.csv  phaseC.csv
data/demand/united/housespecific/weekday/: test.m
data/traffic/: exampletraffic.csv
doc/: POSSIM_Documentation.tex
matlab/: ExampleModel.mdl  ExampleModel_lib.mdl  plotBatterySOC.m  plotChargeRateStats.m  plotCostOfCharging.m  plotEVDemand.m  plotEVbehaviour.m  plotHHDemand.m  plotHouseholdV.m  plotOptimisationOutput.m  plotPhaseI_Wave.m  plotPhaseUnbalance.m  plotPhaseUnbalanceByLine.m  plotPhaseUnbalanceDeviation.m  plotPhaseUnbalanceTrue.m  plotPhaseVI_RMS.m  plotPhaseV_Wave.m  plotPowerFactor.m  plotSpotPrice.m  plotTotalDemand.m  setAxes.m  setloads.m  writeOutputToFile.m
src/: main.cpp
src/battery/: Battery.cpp  Battery.h
src/charging/: ChargingBaseClass.cpp  ChargingBaseClass.h  ChargingDistributed.cpp  ChargingDistributed.h  ChargingEqualShares.cpp  ChargingEqualShares.h  ChargingTOU.cpp  ChargingTOU.h  ChargingUncontrolled.cpp  ChargingUncontrolled.h
src/gridmodel/: DistributionTransformer.h  Feeder.h  GridModel.cpp  GridModel.h  Household.cpp  Household.h  HouseholdDemand.cpp  HouseholdDemand.h  NetworkData.h  Vehicle.cpp  Vehicle.h
src/household/: Household.cpp  Household.h  HouseholdDemandModel.cpp  HouseholdDemandModel.h
src/loadflow/: LoadFlowInterface.h  MatlabInterface.cpp  MatlabInterface.h  TestingInterface.cpp  TestingInterface.h
src/simulator/: Config.cpp  Config.h  Logging.cpp  Logging.h  Simulator.cpp  Simulator.h
src/spotprice/: SpotPrice.cpp  SpotPrice.h
src/trafficmodel/: TrafficModel.cpp  TrafficModel.h
src/utility/: DateTime.cpp  DateTime.h  Phasor.cpp  Phasor.h  Power.cpp  Power.h  Utility.cpp  Utility.h
src/vehicle/: TrafficModel.cpp  TrafficModel.h  Vehicle.cpp  Vehicle.h
